--- a/package.json
+++ b/package.json
@@ -3,7 +3,22 @@
   "private": true,
   "dependencies": {
     "expo": "^25.0.0",
+    "firebase": "^4.10.1",
     "react": "16.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-elements": "^0.19.0",
+    "react-navigation": "^1.2.1"
+  },
+  "devDependencies": {
+    "@types/expo": "^25.0.0",
+    "@types/react": "^16.0.38",
+    "@types/react-native": "^0.52.14",
+    "@types/react-navigation": "^1.2.1",
+    "typescript": "^2.7.2"
+  },
+  "scripts": {
+    "dev": "start npm run watch",
+    "build": "tsc",
+	"watch": "tsc --watch"
   }
 }
